--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-811">
 	<title>bijouterie</title>
-	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/styles.css111">
 	<link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Lobster">
-    <script src="https://use.fontawesome.com/7bcb675de3.js"></script>  
+    <script src="https://use.fontawesome.com/7bcb675de3.js"></script>
 
 </head>
 <body >
@@ -41,20 +41,20 @@
 				<p>В выбранной категории подбор по параметрам:</p>
 				<button class="clear-filters">Сбросить все параметры</button>
 			</div>
-	
+
 		</section>
 
 		<section id="catalog" class="catalog">
-			
+
 			<div class="filters">
 				<div lang="en" class="filters__header">
 					<div class="filters__header-image"></div>
 					<div class="filters__header-text">Выберите категорию:</div>
 					<div class="filters__header-image"></div>
 				</div>
-				
+
 			</div>
-		</section> 
+		</section>
 
 	</div> <!-- //end of mainbody -->
 
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 
 <script src="scripts/index.js"></script>
